* client/core/ShiftFunctions.js: fix behavior of enter and exit edit

--- a/client/views/SSNotifierView/SSNotifierView.css
+++ b/client/views/SSNotifierView/SSNotifierView.css
@@ -220,3 +220,8 @@ button#SSToggleConsole.open
   float: right;	
   margin-right: 5px;
 }
+
+#SSQPCancel, #SSQPDelete
+{
+  cursor: pointer;
+}
